# rust-peg

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  bootstrap.pegjs  bootstrap.rs  bootstrap.sh  grammar.rustpeg  peg.rs  rustpeg.sh  test.sh
.github/workflows/: rust.yml
benches/: expr.rs  expr.rustpeg  json.rs  json.rustpeg
examples/: arithmetic.rustpeg  test_arithmetic.rs  test_errors.rs  test_xml.rs  tests.rs  tests.rustpeg
peg-codegen/: Cargo.toml  analysis.rs  ast.rs  grammar.rs  grammar.rustpeg  lib.rs  test.rs  tokens.rs  translate.rs
peg-macros/: Cargo.toml  analysis.rs  ast.rs  bin.rs  grammar.rs  grammar.rustpeg  lib.rs  tokens.rs  translate.rs
peg-runtime/: Cargo.toml  error.rs  lib.rs  slice.rs  str.rs
peg-syntax-ext/: Cargo.toml  lib.rs
peg-syntax-ext/benches/: expr.rs  expr.rustpeg  json.rs  json.rustpeg
peg-syntax-ext/tests/: arithmetic_ast.rustpeg  grammar_args.rs  test_arithmetic.rs  test_arithmetic_ast.rs  test_conditional.rs  test_errors.rs  test_memoization.rs
peg-tests/: Cargo.toml  build.rs
peg-tests/src/: main.rs  runtime_tests.rs  test_grammar.rustpeg  test_subgrammar.rustpeg  test_subgrammar_with_args.rustpeg  tests.rs
src/: bin.rs  fake_extctxt.rs  grammar.rs  grammar.rustpeg  lib.rs  peg.rs  peg_syntax_ext.rs  rustast.rs  translate.rs
src/peg/: codegen.rs  grammar.rs  grammar.rustpeg  main.rs  peg.rs  rustast.rs
tests/: arithmetic.rs  arithmetic_ast.rs  arithmetic_infix.rs  arithmetic_infix_ast.rs  borrow_from_input.rs  bytes.rs  compiletest.rs  conditional_block.rs  errors.rs  grammar_args.rs  keyval.rs  memoization.rs  optional.rs  pos_neg_assert.rs  position.rs  renamed_imports.rs  repeats.rs  run-pass.rs  templates.rs  test_arithmetic.rs  test_arithmetic_ast.rs  test_backref.rs  test_conditional.rs  test_context.rs  test_errors.rs  test_memoization.rs  test_static.rs  tests.rs  tests.rustpeg  trybuild.rs  utf8.rs
tests/compile-fail/: cache_with_args.rs  cache_with_args.stderr  duplicate_rule.rs  duplicate_rule.stderr  incomplete_grammar.rs  incomplete_grammar.stderr  left_recursion.rs  left_recursion.stderr  left_recursion_without_cache.rs  left_recursion_without_cache.stderr  nullable_loop.rs  nullable_loop.stderr  rule-missing-eq.rs  rule-missing-eq.stderr  rule_args_errors.rs  rule_args_errors.stderr  rust_action_syntax_error.rs  rust_action_syntax_error.stderr  rust_action_type_error.rs  rust_action_type_error.stderr  syntax_error.rs  syntax_error.stderr  use_undefined_result.rs  use_undefined_result.stderr  use_undefined_rule.rs  use_undefined_rule.stderr
tests/pass/: arithmetic.rs  arithmetic_ast.rs  arithmetic_infix.rs  arithmetic_infix_ast.rs  arithmetic_infix_ast_span.rs  arithmetic_no_associative.rs  arithmetic_with_left_recursion.rs  assembly_ast_dyn_type_param_bounds.rs  borrow_from_input.rs  bytes.rs  cache_with_args.rs  conditional_block.rs  crate_import.rs  custom_expr.rs  errors.rs  generic_fn_traits.rs  grammar_with_args_and_cache.rs  keyval.rs  lifetimes.rs  memoization.rs  mod.rs  no_eof.rs  optional.rs  pattern.rs  pos_neg_assert.rs  position.rs  raw_ident.rs  renamed_imports.rs  repeats.rs  return_type.rs  rule_args.rs  rule_generic.rs  rule_impl_use_bound.rs  rule_where_clause.rs  rust_use_tree.rs  test_hygiene.rs  tokens.rs  tokens_struct.rs  utf8.rs
tests/pass-recent-rustc/: rule_impl_use_bound.rs
tests/run-pass/: arithmetic.rs  arithmetic_ast.rs  arithmetic_infix.rs  arithmetic_infix_ast.rs  arithmetic_infix_ast_span.rs  arithmetic_no_associative.rs  arithmetic_recovery.rs  arithmetic_with_left_recursion.rs  assembly_ast_dyn_type_param_bounds.rs  borrow_from_input.rs  bytes.rs  conditional_block.rs  crate_import.rs  custom_expr.rs  cut.rs  errors.rs  generic_fn_traits.rs  grammar_with_args_and_cache.rs  grammar_with_args_and_cache_and_type.rs  keyval.rs  lifetimes.rs  member_variables.rs  memoization.rs  memoization_with_cache_type.rs  no_eof.rs  nonexhaustive.rs  optional.rs  pattern.rs  pos_neg_assert.rs  position.rs  raw_ident.rs  recovery.rs  recursion_limit.rs  renamed_imports.rs  repeats.rs  return_type.rs  rule_args.rs  rule_generic.rs  rule_no_body.rs  rule_where_clause.rs  (+6 more)
tests/run-pass-recent-rustc/: rule_impl_use_bound.rs
xtask/: Cargo.toml
xtask/src/: main.rs
