[workspace]
members = ["./peg-macros", "./peg-runtime"]

[package]
name = "peg"
version = "0.8.1"
authors = [ "Kevin Mehall <km@kevinmehall.net>" ]
license = "MIT"
repository = "https://github.com/kevinmehall/rust-peg"
description = "A simple Parsing Expression Grammar (PEG) parser generator."
keywords = ["peg", "parser", "parsing", "grammar"]
categories = ["parsing"]
readme = "README.md"
edition = "2018"
rust-version = "1.68.0" # if changed, also update .github/workflows/rust.yml

[dependencies]
peg-macros = { path = "./peg-macros", version = "= 0.8.1" }
peg-runtime = { path = "./peg-runtime", version = "= 0.8.1" }

[dev-dependencies]
arrayvec = "0.7.2"
assert_matches = "1.5.0"
smallvec = "1.10.0"
trybuild = "1.0.80"
version_check = "0.9"

[[test]]
name = "trybuild"
path = "tests/trybuild.rs"
harness = false

[features]
default = ["std"]
trace = ["peg-macros/trace"]
std = ["peg-runtime/std"]
alloc = ["peg-runtime/alloc", "peg-macros/alloc"]
unstable = ["peg-runtime/unstable", "peg-macros/unstable"]
arrayvec = ["peg-runtime/arrayvec", "peg-macros/arrayvec"]
smallvec = ["peg-runtime/smallvec", "peg-macros/smallvec"]