[workspace]
members = ["./peg-macros", "./peg-runtime", "xtask"]

[workspace.package]
version = "0.8.5"
authors = [ "Kevin Mehall <km@kevinmehall.net>" ]
license = "MIT"
repository = "https://github.com/kevinmehall/rust-peg"
edition = "2021"
rust-version = "1.68.0" # if changed, also update .github/workflows/rust.yml

[workspace.dependencies]
peg-runtime = { path = "peg-runtime", version = "= 0.8.5" }
peg-macros = { path = "peg-macros", version = "= 0.8.5" }

[package]
name = "peg"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A simple Parsing Expression Grammar (PEG) parser generator."
edition.workspace = true
rust-version.workspace = true
keywords = ["peg", "parser", "parsing", "grammar"]
categories = ["parsing"]
readme = "README.md"

[dependencies]
peg-macros.workspace = true
peg-runtime.workspace = true

[dev-dependencies]
trybuild = "1.0.80"
version_check = "0.9"

[[test]]
name = "trybuild"
path = "tests/trybuild.rs"
harness = false

[features]
default = ["std"]
trace = ["peg-macros/trace"]
std = ["peg-runtime/std"]
unstable = ["peg-runtime/unstable"]
