[package]
name = "peg-codegen"
version = "0.6.0"
authors = [ "Kevin Mehall <km@kevinmehall.net>" ]
license = "MIT"
repository = "https://github.com/kevinmehall/rust-peg"
description = "Compilation of rust-peg grammars. To use rust-peg, see the `peg` crate."

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
peg-runtime = { version = "0.6", path = "../peg-runtime" }

[features]
trace = []

[lib]
path = "lib.rs"