[package]
name = "peg-macros"
version = "0.8.0"
authors = [ "Kevin Mehall <km@kevinmehall.net>" ]
license = "MIT"
repository = "https://github.com/kevinmehall/rust-peg"
description = "Procedural macros for rust-peg. To use rust-peg, see the `peg` crate."
edition = "2018"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0.24"
peg-runtime = { version = "= 0.8.0", path = "../peg-runtime" }
cfg-if = "1.0.0"

[features]
std = []
trace = []
hashbrown = []

[lib]
proc-macro = true
name = "peg_macros"
path = "lib.rs"

[[bin]]
name = "rust-peg"
path = "bin.rs"
test = false
bench = false
