[package]
name = "peg-runtime"
version = "0.8.1"
authors = [ "Kevin Mehall <km@kevinmehall.net>" ]
license = "MIT"
repository = "https://github.com/kevinmehall/rust-peg"
description = "Runtime support for rust-peg grammars. To use rust-peg, see the `peg` crate."
edition = "2018"

[lib]
path = "lib.rs"

[features]
std = ["arrayvec?/std"]
alloc = ["smallvec"]
unstable = ["scapegoat"]
arrayvec = ["dep:arrayvec", "unstable"]
smallvec = ["dep:smallvec", "unstable", "alloc"]

[dependencies]
arrayvec = { version = "0.7.2", optional = true, default-features = false }
scapegoat = { version = "2.3.0", optional = true }
smallvec = { version = "1.10.0", optional = true }
