[package]
name = "peg-runtime"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime support for rust-peg grammars. To use rust-peg, see the `peg` crate."
edition.workspace = true
rust-version.workspace = true

[lib]
path = "lib.rs"

[features]
std = []
unstable = []
