[package]
name = "peg-syntax-ext"
version = "0.5.2"
authors = [ "Kevin Mehall <km@kevinmehall.net>" ]
license = "MIT"
repository = "https://github.com/kevinmehall/rust-peg"
description = """
A parser generator built on the Parsing Expression Grammar (PEG) formalism.

This crate provides the syntax extension plugin for use with Rust nightly.
"""

[dependencies]
peg = { version = "0.5", path = "../" }

[lib]
proc-macro = true
name = "peg_syntax_ext"
path = "lib.rs"
