[package]
name = "peg-syntax-ext"
version = "0.5.7"
authors = [ "Kevin Mehall <km@kevinmehall.net>" ]
license = "MIT"
repository = "https://github.com/kevinmehall/rust-peg"
description = """
Deprecated syntax extension plugin for Rust nightly. See the `peg` crate for other integration options.
"""

[dependencies]
peg = { version = "0.5", path = "../" }

[lib]
plugin = true
name = "peg_syntax_ext"
path = "lib.rs"

[badges]
maintenance = { status = "deprecated" }
