[package]
name = "peg-syntax-ext"
version = "0.6.0"
authors = [ "Kevin Mehall <km@kevinmehall.net>" ]
license = "MIT"
repository = "https://github.com/kevinmehall/rust-peg"
description = "Procedural macros for rust-peg. To use rust-peg, see the `peg` crate."

[dependencies]
peg-codegen = { version = "0.6", path = "../peg-codegen" }

[lib]
proc-macro = true
name = "peg_syntax_ext"
path = "lib.rs"
