[package]
name = "peg-tests"
version = "0.0.0"
authors = [ "Kevin Mehall <km@kevinmehall.net>" ]
license = "MIT"
repository = "https://github.com/kevinmehall/rust-peg"
description = "Tests for the peg crate"
build = "build.rs"

[build-dependencies]
peg = { version = "0.5", path = "../" }

[features]
formatted_output = ["peg/formatted_output"]
